# nixtodo

./: .gitattributes  Makefile  README.md  default.nix  jobset.nix  nixpkgs.nix  release.nix  spec.json
db/: create_or_update_db.sh  create_or_update_roles.sh
db/migrations/: 000.sql  001.sql  002.sql
hs-pkgs/: README.md
hs-pkgs/nixtodo-api/: nixtodo-api.cabal  shell.nix
hs-pkgs/nixtodo-api-client/: nixtodo-api-client.cabal  shell.nix
hs-pkgs/nixtodo-api-client/src/Nixtodo/Api/: Client.hs
hs-pkgs/nixtodo-api/src/Nixtodo/: Api.hs
hs-pkgs/nixtodo-backend/: nixtodo-backend.cabal  shell.nix
hs-pkgs/nixtodo-backend/src/: nixtodo-backend.hs
hs-pkgs/nixtodo-backend/src/Nixtodo/Backend/: Db.hs  IndexTemplater.hs  WebServer.hs
hs-pkgs/nixtodo-backend/src/Nixtodo/Backend/Db/: Types.hs
hs-pkgs/nixtodo-frontend/: index.html.mustache  nixtodo-frontend.cabal  override.nix  shell.nix
hs-pkgs/nixtodo-frontend/src/: nixtodo-frontend.hs
hs-pkgs/nixtodo-frontend/src/Servant/Client/Ghcjs/: Extended.hs
hs-pkgs/nixtodo-frontend/static/: default.css  style.css
modules/: README.md  base.nix  cache.nixtodo.com-public-key  default.nix  hydra.nix
modules/backend/: README.md  db.nix  default.nix  server.nix
modules/nixtodo-net/: README.md  aws.nix  containerized.nix  default.nix
modules/users/bas/.ssh/: id_rsa.pub
modules/users/peti/.ssh/: id_rsa.pub
nix/: README.md  haskell-overrides.nix  overlay.nix
nix/haskell/servant/: default.nix
nix/haskell/servant-client/: default.nix
nix/haskell/servant-client-core/: default.nix
nix/haskell/servant-client-ghcjs/: default.nix
nix/haskell/servant-server/: default.nix
nix/haskell/servant-swagger/: default.nix
secrets/: README.md  cache.nixtodo.com-secret-key  devops-hydra-password  dhparams.pem  hydra-github.id_rsa  hydra-github.id_rsa.pub  postgresql-nixtodo-role-password  state.nixops
