name:                nixtodo-backend
version:             0.1.0.0
synopsis:            TODO-list backend
homepage:            https://github.com/basvandijk/nix-workshop
license:             BSD3
author:              Bas van Dijk
maintainer:          v.dijk.bas@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable nixtodo-backend
  main-is: nixtodo-backend.hs
  build-depends:       SHA
                     , async
                     , aeson
                     , base
                     , base16-bytestring
                     , bytestring
                     , containers
                     , configurator
                     , data-default
                     , directory
                     , filepath
                     , fsnotify
                     , hastache
                     , http-types
                     , lens
                     , managed
                     , opaleye
                     , optparse-applicative
                     , postgresql-simple
                     , product-profunctors
                     , resource-pool
                     , servant
                     , servant-server
                     , stm
                     , text
                     , tagged
                     , nixtodo-api
                     , unix
                     , wai-extra
                     , wai-app-static
                     , wai-websockets
                     , websockets
                     , wai
                     , warp
                     , zlib
  default-language:    Haskell2010
  hs-source-dirs: src
  other-modules:
    Nixtodo.Backend.Db
    Nixtodo.Backend.Db.Types
    Nixtodo.Backend.WebServer
    Nixtodo.Backend.IndexTemplater
